<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="message">Hello!</string>
    <string name="Welcome">Go to Chat</string>
    <string name="yourProfile">"Your Profile"</string>
    <string name="name">"Your Name:"</string>
    <string name="hinttext3">Enter your name:</string>
    <string name="email">Your Email:</string>
    <string name="hinttext">Type email here</string>
    <string name="pic">Your picture:</string>
    <string name="chatButton">Go to chat</string>
    <string name="receive">RECEIVE</string>
    <string name="type">Type here</string>
    <string name="send">SEND</string>
    <string name="weather">Check the Weather</string>
    <string name="currentText">Current Temperature:</string>
    <string name="minText">Minimum Temperature:</string>
    <string name="maxText">Maximum Temperature:</string>
    <string name="UVText">UV value:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messageHere">Message Here</string>
    <string name="ID">ID = </string>
    <string name="IsASendMessage">Is a Send Message</string>
    <string name="hide">Hide</string>
</resources>