<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourProfile" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hinttext3"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hinttext"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"/>

    <TextView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic" />

    <ImageButton
        android:id="@+id/imagebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/chatbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/chatButton"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"/>

</LinearLayout>