<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:orientation="horizontal"
    android:id="@+id/fragmentLocation">

    <TextView
        android:id="@+id/MessageHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageHere" />

    <TextView
        android:id="@+id/ID"
        android:layout_below="@+id/MessageHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_below="@+id/ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IsASendMessage"/>
    
    <Button
        android:id="@+id/hide"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide"/>


</RelativeLayout>