<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     tools:context=".ChatRoomActivity"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <ListView
        android:id="@+id/theListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_alignParentBottom = "true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/receivebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive"
            android:nextFocusDown="@id/item1"
            android:nextFocusUp="@id/item2"
            android:nextFocusRight="@id/item3"
            android:nextFocusLeft="@id/item4"/>

        <EditText
            android:id="@+id/input"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:inputType="text"
            android:nextFocusDown="@id/item1"
            android:nextFocusUp="@id/item2"
            android:nextFocusRight="@id/item3"
            android:nextFocusLeft="@id/item4"/>

        <Button
            android:id="@+id/sendbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:nextFocusDown="@id/item1"
            android:nextFocusUp="@id/item2"
            android:nextFocusRight="@id/item3"
            android:nextFocusLeft="@id/item4"/>
    </LinearLayout>
</RelativeLayout>